# IA_P3

./: .gitignore  CMakeLists.txt  README.md  install.sh  ninja_bridge.py
Comportamiento_Agente/: AgenteEstudiante.cpp  AgenteEstudiante.hpp
include/: Agente.hpp  AgenteAleatorio.hpp  AgenteHumanoConsola.hpp  AgenteNinja.hpp  ControladorJuego.hpp  GUI.hpp  Tablero.hpp
src/: AgenteNinja.cpp  ControladorJuego.cpp  GUI.cpp  Tablero.cpp  main.cpp
